Project HRIS {
    database_type: 'MySql'
}

Table vacancy {
    id int [pk, increment]
    title varchar
    division_id int
    department_id int
    description text
    start timestamp
    end timestamp
    needs int
    job_type_id tinyint
    working_type tinyint [Note: '1 for WFO, 2 for WFA, 3 for Hybrid']
    is_active boolean
    created_by int
    created_at timestamp
    updated_at timestamp
}

Table job_type {
    id int [pk, increment]
    name varchar
    created_at timestamp
    updated_at timestamp
}

Table recruitment_setting {
    id int [pk, increment]
    name varchar
    step tinyint
    message text
    created_at timestamp
    updated_at timestamp
}

Table applicant {
    id int [pk, increment]
    employee_id int [ref: > employees.id]
    vacancy_id int [ref: > vacancy.id]
    expectation_salary varchar
    cv text
    application_letter text
    progress_recruitment int [ref: > recruitment_setting.id]
    created_at timestamp
    updated_at timestamp
    reject_at timestamp [Note: 'Timestamp to define when user has been reject by HR']
}

Table employees {
    id int [pk, increment]
    employee_code varchar [not null, unique]
    name varchar [not null]
    email varchar [not null, unique]
    phone varchar [not null]
    nik varchar [not null]
    division_id int [not null]
    department_id int [not null]
    address varchar [not null]
    village_id int [not null]
    district_id int [not null]
    city_id int [not null]
    province_id int [not null]
    account_number varchar
    bank_name varchar
    social_media longtext
    bpjs_ketenagakerjaan varchar
    bpjs_kesehatan varchar
    npwp varchar
    is_active boolean
    meta_experience longtext
    meta_education longtext
    mother_name varchar
    user_id int [ref: > users.id]
    status tinyint [Note: '1 for permanent, 2 for internship, 3 for vaccant, 4 for reject applicant']
    internship_date timestamp [Note: 'Date when user assign the internship letter']
    permanent_date timestamp [Note: 'Date when user assign the permanent letter']
    apply_vaccant_date timestamp [Note: 'Date when user apply for available vacancy']
    created_at timestamp
    updated_at timestamp
}

Table users {
    id int [pk, inicrement]
    email varchar [not null]
    password text [not null]
    role int [not null]
    created_at timestamp
    updated_at timestamp
}

Table employee_signature {
    id int [pk, increment]
    employee_id [ref: > employees.id]
    signature text
    created_at timestamp
    updated_at timestamp
}

Table employee_medical_history {
    id int [pk, increment]
    employee_id int [ref: > employees.id]
    condition text
    documents text [Note: 'supporting documents to prove health history']
    created_at timestamp
    updated_at timestamp
}

Table vacancy_message {
    id int [pk, increment]
    sender_email varchar [not null, note: 'Sender email']
    sender_phone varchar
    receiver_email varchar [not null]
    receiver_phone varchar
    message text [not null]
    vacancy_id int [not null, ref: > vacancy.id]
    message_group int [not null, note: 'Automatic generate']
    created_at timestamp
    updated_at timestamp
    read_at timestamp
}